0026275: Visualization, TKOpenGl - add public constructor for OpenGl_ShaderProgram